--- a/UPDATE.html
+++ b/UPDATE.html
@@ -3,6 +3,6 @@
 {
 "Version" : "1.1",
 "Update_Log" : "Hello Everyone A new version of Mod has been lunched.If you want new features you can easily view this content.More Information visit here https://instagram.kanha_bzs/",
-"Update_Link" : "https://maharnamods.blogspot.com"
+"Update_Link" : "https://t.me/+8DW2XWNortM1OGI1"
 }
 ]
