--- a/UPDATE.html
+++ b/UPDATE.html
@@ -1,8 +1,9 @@
 
 [
 {
-"Version" : "1.0",
-"Update_Log" : "Hello Everyone A new version of Mod has been lunched.If you want new features you can easily view this content.More Information visit here https://instagram.kanha_bzs/",
+"Version" : "2.0",
+"Update_Log" : "LODE UPDATE KR 
+TELEGRAM SE 👇👇👇",
 "Update_Link" : "https://t.me/+8DW2XWNortM1OGI1"
 }
 ]
